--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 haversine==2.3.0
 bng-latlon==1.1
-SQLAlchemy==1.4.15
+SQLAlchemy==1.4.41
 fuzzyfinder==2.1.0
 pydantic==1.10.9
 rich==13.4.2
+sqlmodel==0.0.8
