Updates to models, tests and find

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,36 @@
-haversine==2.3.0
-bng-latlon==1.1
-SQLAlchemy==1.4.41
-fuzzyfinder==2.1.0
-pydantic==1.10.9
-rich==13.4.2
-sqlmodel==0.0.8
-geocoder==1.38.1
 beautifulsoup4==4.12.2
-pandas==2.0.3
-lxml==4.9.3
+bng_latlon==1.1
+certifi==2025.6.15
+charset-normalizer==3.4.2
+click==8.2.1
+decorator==5.2.1
+future==1.0.0
+fuzzyfinder==2.1.0
+geocoder==1.38.1
+greenlet==3.2.3
+haversine==2.3.0
+idna==3.10
+iniconfig==2.1.0
+lxml==6.0.0
+markdown-it-py==3.0.0
+mdurl==0.1.2
+numpy==2.3.1
+packaging==25.0
+pandas==2.3.0
+pluggy==1.6.0
+pydantic==1.10.9
+Pygments==2.19.2
+pytest==8.4.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+ratelim==0.1.6
+requests==2.32.4
+rich==13.4.2
+six==1.17.0
+soupsieve==2.7
+SQLAlchemy==1.4.41
+sqlalchemy2-stubs==0.0.2a38
+sqlmodel==0.0.8
+typing_extensions==4.14.0
+tzdata==2025.2
+urllib3==2.5.0
